--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 				<!-- Existing content container -->
 				<div class="container">
 					<div class="welcome-hero-txt">
-						<h2>get your desired car in resonable price</h2>
+						<h2>Barcha avtozapchastlar bir platformada!</h2>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+							Model yoki VIN raqam orqali izlang, narxlarni solishtiring, uyingizga buyurtma qiling! 
 						</p>
-						<button class="welcome-btn" onclick="window.location.href='#'">contact us</button>
+						<button class="welcome-btn" onclick="window.location.href='#'">Bog'lanish</button>
 					</div>
 				</div>
 			</div>
