--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <title>G'ildirak</title>
 
         <!-- For favicon png -->
-		<link rel="shortcut icon" type="image.png" href="assets/logo/image.png"/>
+		<link rel="shortcut icon" type="image/png" href="assets/logo/image.png"/>
 
        
         <!--font-awesome.min.css-->
