--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <title>G'ildirak</title>
 
         <!-- For favicon png -->
+		<link rel="icon" type="image/png" href="assets/logo/favicon.png">
 
        
         <!--font-awesome.min.css-->
