--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <title>G'ildirak</title>
 
         <!-- For favicon png -->
-		<link rel="icon" type="image/png" href="assets/logo/favicon.png">
+		<link rel="icon" type="image/jpg" href="assets/logo/image.jpg">
 
        
         <!--font-awesome.min.css-->
@@ -89,7 +89,7 @@
 				                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 				                    <li class=" scroll active"><a href="#home">home</a></li>
 				                    <li class="scroll"><a href="#service">service</a></li>
-				                    <!-- <li class="file"><a href="shops.html">shops</a></li> -->
+				                    <li class="file"><a href="shops.html">shops</a></li>
 				                    <li class="scroll"><a href="#featured-cars">featured cars</a></li>
 				                    <li class="scroll"><a href="#brand">brands</a></li>
 				                    <li class="scroll"><a href="#contact">contact</a></li>
