--- a/index.html
+++ b/index.html
@@ -105,28 +105,28 @@
 			<!-- top-area End -->
 
 			<div class="welcome-hero">
-				<!-- Video background element -->
+				<!-- Video background -->
 				<div class="video-background">
-					<video autoplay muted loop id="welcomeVideo">
+					<video autoplay muted loop playsinline id="welcomeVideo">
 						<source src="assets/images/welcome-hero/welcome.mp4" type="video/mp4">
-						<!-- Fallback image if video doesn't load -->
-						<img src="../images/welcome-hero/welcome-banner.jpg" alt="Welcome banner">
+						<source src="assets/images/welcome-hero/welcome.webm" type="video/webm">
+						<!-- Fallback image -->
+						<img src="assets/images/welcome-hero/welcome-banner.jpg" alt="Auto parts background">
 					</video>
 				</div>
 				
-				<!-- Existing content container -->
+				<!-- Content overlay -->
 				<div class="container">
 					<div class="welcome-hero-txt">
 						<h2>Barcha avtozapchastlar bir platformada!</h2>
 						<p>
 							Model yoki VIN raqam orqali izlang, narxlarni solishtiring, uyingizga buyurtma qiling! 
 						</p>
-						<button class="welcome-btn" onclick="window.location.href='#'">Bog'lanish</button>
+						<button class="welcome-btn" onclick="window.location.href='contact.html'">Bog'lanish</button>
 					</div>
 				</div>
 			</div>
 
-			
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
