--- a/index.html
+++ b/index.html
@@ -103,13 +103,22 @@
 			</div><!-- /.top-area-->
 			<!-- top-area End -->
 
+			<div class="video-background">
+				<video autoplay muted loop playsinline id="welcomeVideo">
+					<source src="assets/images/welcome-hero/videoplayback.mp4" type="video/mp4">
+				</video>
+			</div>
+			
+			<!-- Content Overlay -->
 			<div class="container">
 				<div class="welcome-hero-txt">
-					<h2>get your desired car in resonable price</h2>
+					<h2>Avtomobilingiz uchun to'g'ri zapchastni bir joydan toping!</h2>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore   magna aliqua. 
+						Model yoki VIN raqam orqali izlang, narxlarni solishtiring, uyingizga yetkazib olishni buyurtma qiling!
 					</p>
-					<button class="welcome-btn" onclick="window.location.href='#'">contact us</button>
+					<div class="welcome-btns">
+						<button class="welcome-btn">Bog'lanish</button>
+					</div>
 				</div>
 			</div>
 
