--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 				                    <li class=" scroll active"><a href="#home">home</a></li>
 				                    <li class="file"><a href="shops.html">Shops</a></li>
 				                    <li class="file"><a href="service.html">service</a></li>
-				                    <li class="scroll"><a href="#featured-cars">featured cars</a></li>
 				                    <li class="scroll"><a href="#brand">brands</a></li>
 				                    <li class="scroll"><a href="#contact">contact</a></li>
+									<li><a href="featured-cars.html" class="active"><i class="fas fa-shopping-cart"></i> SAVATCHA (3)</a></li>
 				                </ul><!--/.nav -->
 				            </div><!-- /.navbar-collapse -->
 				        </div><!--/.container-->
