--- a/shops.html
+++ b/shops.html
@@ -575,9 +575,10 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="shops.html" class="active">SHOPS</a></li>
                 <li><a href="service.html">SERVICE</a></li>
-                <li><a href="featured-cars.html">FEATURED CARS</a></li>
                 <li><a href="brands.html">BRANDS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="featured-cars.html" class="active"><i class="fas fa-shopping-cart"></i> SAVATCHA (3)</a></li>
+
             </ul>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -900,8 +901,9 @@
                         <li><a href="index.html">Bosh sahifa</a></li>
                         <li><a href="shops.html">Do'kon</a></li>
                         <li><a href="service.html">Xizmatlar</a></li>
-                        <li><a href="featured-cars.html">Avtomobillar</a></li>
                         <li><a href="contact.html">Aloqa</a></li>
+                        <li><a href="featured-cars.html" class="active"><i class="fas fa-shopping-cart"></i> SAVATCHA (3)</a></li>
+
                     </ul>
                 </div>
                 
