--- a/service.html
+++ b/service.html
@@ -542,9 +542,9 @@
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="shops.html">SHOPS</a></li>
                 <li><a href="service.html">SERVICE</a></li>
-                <li><a href="featured-cars.html">FEATURED CARS</a></li>
                 <li><a href="brands.html">BRANDS</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="featured-cars.html" class="active"><i class="fas fa-shopping-cart"></i> SAVATCHA (3)</a></li>
             </ul>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
