--- a/index.html
+++ b/index.html
@@ -986,14 +986,14 @@
 						<div class="col-md-3 col-sm-6">
 							<div class="single-footer-widget">
 								<div class="footer-logo">
-									<a href="index.html">carvilla</a>
+									<a href="index.html">G'ildirak</a>
 								</div>
 								<p>
-									Ased do eiusm tempor incidi ut labore et dolore magnaian aliqua. Ut enim ad minim veniam.
+									Barcha avto ehtiyot qismlari va avtomobillar uchun xizmat ko'rsatish markazi.
 								</p>
 								<div class="footer-contact">
-									<p>info@themesine.com</p>
-									<p>+1 (885) 2563154554</p>
+									<p>gildirak@themesine.com</p>
+									<p>+998 (77) 447 77 47</p>
 								</div>
 							</div>
 						</div>
