--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 				            <!-- Collect the nav links, forms, and other content for toggling -->
 				            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 				                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
-				                    <li class=" scroll active"><a href="#home">home</a></li>
-				                    <li class="file"><a href="shops.html">Shops</a></li>
-				                    <li class="file"><a href="service.html">service</a></li>
-				                    <li class="scroll"><a href="#brand">brands</a></li>
-				                    <li class="scroll"><a href="#contact">contact</a></li>
+				                    <li class=" scroll active"><a href="#home">Bosh sahifa</a></li>
+				                    <li class="file"><a href="shops.html">do'kon</a></li>
+				                    <li class="file"><a href="service.html">xizmatlar</a></li>
+				                    <li class="scroll"><a href="#brand">brendlar</a></li>
+				                    <li class="scroll"><a href="#contact">aloqa</a></li>
 									<li><a href="featured-cars.html" class="active"><i class="fas fa-shopping-cart"></i> SAVATCHA (3)</a></li>
 				                </ul><!--/.nav -->
 				            </div><!-- /.navbar-collapse -->
