--- a/service.html
+++ b/service.html
@@ -539,11 +539,11 @@
             <a href="index.html" class="logo">G'ILDIRAK</a>
             
             <ul class="nav-links" id="navLinks">
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="shops.html">SHOPS</a></li>
-                <li><a href="service.html">SERVICE</a></li>
-                <li><a href="brands.html">BRANDS</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="index.html">Bosh sahifa</a></li>
+                <li><a href="shops.html">Do'konlar</a></li>
+                <li><a href="service.html">Xizmatlar</a></li>
+                <li><a href="brands.html">Brendlar</a></li>
+                <li><a href="contact.html">Aloqa</a></li>
                 <li><a href="featured-cars.html" class="active"><i class="fas fa-shopping-cart"></i> SAVATCHA (3)</a></li>
             </ul>
             
