--- a/contact.html
+++ b/contact.html
@@ -309,7 +309,7 @@
                 <ul>
                     <li><a href="index.html">Bosh Sahifa</a></li>
                     <li><a href="about.html">Biz Haqimizda</a></li>
-                    <li><a href="services.html">Xizmatlar</a></li>
+                    <li><a href="service.html">Xizmatlar</a></li>
                     <li><a href="contact.html" class="active">Aloqa</a></li>
                 </ul>
             </nav>
