--- a/contact.html
+++ b/contact.html
@@ -307,10 +307,14 @@
             <a href="index.html" class="logo">G'ILDIRAK</a>
             <nav>
                 <ul>
-                    <li><a href="index.html">Bosh Sahifa</a></li>
-                    <li><a href="about.html">Biz Haqimizda</a></li>
-                    <li><a href="service.html">Xizmatlar</a></li>
-                    <li><a href="contact.html" class="active">Aloqa</a></li>
+                    <li><a href="index.html">Bosh sahifa</a></li>
+                <li><a href="shops.html">Do'kon</a></li>
+                <li><a href="service.html">Xizmatlar</a></li>
+                <li><a href="brands.html" class="active">Brendlar</a></li>
+                <li><a href="contact.html">Aloqa</a></li>
+                <li>
+                    <a href="featured-cars.html">SAVATCHA <span class="cart-count">3</span></a>
+                </li>
                 </ul>
             </nav>
         </div>
