--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 				                    <li class=" scroll active"><a href="#home">Bosh sahifa</a></li>
 				                    <li class="file"><a href="shops.html">do'kon</a></li>
 				                    <li class="file"><a href="service.html">xizmatlar</a></li>
-				                    <li class="scroll"><a href="#brand">brendlar</a></li>
-				                    <li class="scroll"><a href="#contact">aloqa</a></li>
+				                    <li class="file"><a href="brands.html">brendlar</a></li>
+				                    <li class="file"><a href="contact.html">aloqa</a></li>
 									<li><a href="featured-cars.html" class="active"><i class="fas fa-shopping-cart"></i> SAVATCHA (3)</a></li>
 				                </ul><!--/.nav -->
 				            </div><!-- /.navbar-collapse -->
