--- a/brands.html
+++ b/brands.html
@@ -280,7 +280,7 @@
                 <li><a href="brands.html" class="active">Brendlar</a></li>
                 <li><a href="contact.html">Aloqa</a></li>
                 <li>
-                    <a href="featured-cars.html">SAVATCHA <span class="cart-count">3</span></a>
+                    <a href="featured-cars.html">Savatcha</a>
                 </li>
             </ul>
             
