--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				                    <li class="file"><a href="service.html">xizmatlar</a></li>
 				                    <li class="file"><a href="brands.html">brendlar</a></li>
 				                    <li class="file"><a href="contact.html">aloqa</a></li>
-									<li><a href="featured-cars.html" class="active"><i class="fas fa-shopping-cart"></i> SAVATCHA (3)</a></li>
+									<li><a href="featured-cars.html" class="active"><i class="fas fa-shopping-cart"></i> Savatcha</a></li>
 				                </ul><!--/.nav -->
 				            </div><!-- /.navbar-collapse -->
 				        </div><!--/.container-->
