--- a/shops.html
+++ b/shops.html
@@ -577,7 +577,7 @@
                 <li><a href="service.html">Xizmatlar</a></li>
                 <li><a href="brands.html">Brendlar</a></li>
                 <li><a href="contact.html">Aloqa</a></li>
-                <li><a href="featured-cars.html" class="active"><i class="fas fa-shopping-cart"></i> SAVATCHA (3)</a></li>
+                <li><a href="featured-cars.html" class="active"><i class="fas fa-shopping-cart"></i> Savatcha </a></li>
 
             </ul>
             
