--- a/contact.html
+++ b/contact.html
@@ -313,7 +313,7 @@
                 <li><a href="brands.html" class="active">Brendlar</a></li>
                 <li><a href="contact.html">Aloqa</a></li>
                 <li>
-                    <a href="featured-cars.html">Savatcha <span class="cart-count">3</span></a>
+                    <a href="featured-cars.html">Savatcha</a>
                 </li>
                 </ul>
             </nav>
